modificaciones en el centro de notificaciones

--- a/VLaboralWeb/App/ExperienciasLaborales/Partials/VerificarExperienciasProfesional.html
+++ b/VLaboralWeb/App/ExperienciasLaborales/Partials/VerificarExperienciasProfesional.html
@@ -1,18 +1,17 @@
-﻿<div layout="column" flex>
+﻿<div layout="column" flex layout-padding >
 
-    <md-toolbar class="md-theme-light">
-        <h2 class="md-toolbar-tools">
-            <span>Solitud de Verificacion Laboral</span>
-        </h2>
-    </md-toolbar>
-
-    <md-content>
-        <md-card>
+    <md-card>
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <span>Solitud de Verificacion Laboral</span>
+            </div>
+        </md-toolbar>
+        <md-card-content>
             <md-card-title>
                 <md-card-title-media>
                     <!--<div class="md-media-sm card-media" layout>
-                        <md-icon style="width: 80px; height: 80px" md-svg-src="svg/id-card.svg"></md-icon>
-                    </div>-->
+                <md-icon style="width: 80px; height: 80px" md-svg-src="svg/id-card.svg"></md-icon>
+            </div>-->
                 </md-card-title-media>
                 <span></span>
                 <md-card-title-text>
@@ -21,16 +20,19 @@
                     <span class="md-subhead description">Fecha Nacimiento: {{profesional.FechaNac}}</span>
                 </md-card-title-text>
             </md-card-title>
-        </md-card>
-    </md-content>
+        </md-card-content>
 
-    <md-toolbar layout="row" class="md-hue-3">
-        <div class="md-toolbar-tools">
-            <span>Listado Experiencias</span>
-        </div>
-    </md-toolbar>
+        
+    </md-card>
+
+    
 
     <md-content>
+        <md-toolbar layout="row" class="md-hue-3">
+            <div class="md-toolbar-tools">
+                <span>Listado Experiencias</span>
+            </div>
+        </md-toolbar>
         <md-list class="md-dense" flex>
             <md-subheader class="md-no-sticky">{{puestos.length}} Puestos pendientes a confirmar</md-subheader>
 
