--- a/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
+++ b/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
@@ -19,8 +19,8 @@
 
                                                 <div class="ni2">
                                                     <h5>{{n.FechaPublicacion | date:'medium'}}</h5>
-                                                    <a ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">Ver Mas</a>
-                                                    <a href="#"><span class="icon-cross"></span></a>
+                                                    <md-button ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">Ver Mas</md-button>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
@@ -52,7 +52,8 @@
 
                                                 <div class="ni2">
                                                     <h5>{{n.FechaPublicacion | date:'medium'}}</h5>
-                                                    <a href="#"><span class="icon-cross"></span></a>
+                                                    <md-button ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">Ver Mas</md-button>
+
                                                 </div>
                                             </div>
                                         </div>
@@ -62,12 +63,13 @@
                         </div>
                     </div>
                     <div flex>
-                        <div class="n_detalle">
+                        <div ui-view="detalleNotificacion"></div>                        
+                        <!--<div class="n_detalle">
                             <h1>Detalle de la notificación</h1>
                             <div class="detalle_cont">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit voluptate optio suscipit odio!</p>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>          
             </md-tab>
@@ -89,8 +91,10 @@
 
                                                 <div class="ni2">
                                                     <h5>{{n.FechaPublicacion | date:'medium'}}</h5>
-                                                    <a href="#"><span class="icon-cross"></span></a>
+                                                    <md-button ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">Ver Mas</md-button>
+
                                                 </div>
+                                                
                                             </div>
                                         </div>
                                     </md-list-item>
@@ -99,12 +103,13 @@
                         </div>
                     </div>
                     <div flex>
-                        <div class="n_detalle">
+                        <div ui-view="detalleNotificacion"></div>                        
+                        <!--<div class="n_detalle">
                             <h1>Detalle de la notificación</h1>
                             <div class="detalle_cont">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit voluptate optio suscipit odio!</p>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>          
             </md-tab>
