--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
@@ -29,7 +29,7 @@
                         <md-button ng-click="doSomething()">Do Something</md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <a ui-sref="profesional.centroNotificaciones">Ver Todas</a>
+                        <md-button ui-sref="profesional.centroNotificaciones">Ver Todas</md-button>
                     </md-menu-item>
                 </md-menu-content>
             </md-menu>
