--- a/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
@@ -69,10 +69,12 @@
                             <div layout="row">
                                 <div flex="grow">
                                     <h2 class="md-title">Rubros seleecionados</h2>
-                                    <md-chips ng-model="profesional.Subrubros" readonly="!editValue ? true : false">
+                                    <md-chips ng-model="profesional.Subrubros" readonly="!editValue ? true : false" name="chipContainer"
+                                              md-max-chips="5"
+                                              md-transform-chip="transformChip($chip)">
                                         <md-chip-template>
                                             <span>
-                                                <strong>{{$chip}}</strong>
+                                                <strong>{{$chip.Nombre}}</strong>
                                             </span>
                                         </md-chip-template>
                                     </md-chips>
