--- a/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
+++ b/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
@@ -34,7 +34,8 @@
                     </div>
                 </div>          
             </md-tab>
-            <md-tab label="Experiencias para verificar">
+            <md-tab label="Experiencias para verificar"
+                   >  <!--ui-sref=""-->  <!--md-on-select='verDetalleNotif(2,"EXP")'-->
                 <div layout="row">
                     <div flex>
                         <div class="n_centro">
@@ -42,18 +43,23 @@
                                 <md-subheader class="md-primary">Nuevas Experiencias</md-subheader>
                                 <md-list layout-padding>
                                     <!-- ng-repeat="n in notificaciones | filterBy: ['TipoNotificacion.Valor']: 'EXP'" -->
-                                    <md-list-item class="md-3-line" ng-repeat="nExp in experienciasPendientesList" > <!--iafar: deberiamos hacer que el filtro traiga todas las notificaciones que tienen coincidencia con el listado de experiencias por verificar-->
+                                    <md-list-item class="md-3-line" ng-repeat="nExp in experienciasPendientesList" ng-click="null">
+                                        <!--iafar: deberiamos hacer que el filtro traiga todas las notificaciones que tienen coincidencia con el listado de experiencias por verificar-->
                                         <!--<img src=" img />perfil.jpg" class="md-avatar" alt="{{message.who}}">--> <!--iafar: probar en el ng-click con el state.go-->
                                         <div class="md-list-item-text">
                                             <div class="notis_info">
                                                 <div class="ni1">
                                                     <h3>Solicitud de Verificacion</h3> <!--{{n.TipoNotificacion.Descripcion}}-->
+                                                    <h4>
                                                     <h4>{{nExp.puesto}}</h4>   <!--{{n.Mensaje}}-->
+                                                    </div>
+
                                                 </div>
 
                                                 <div class="ni2">
                                                     <h5>{{nExp.fechaCreacion | date:'dd/MM/yyyy'}}</h5> <!--{{n.FechaPublicacion | date:'medium'}}-->
-                                                    
+                                                    </div>
+
                                                 </div>
                                             </div>
                                         </div>
@@ -70,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                </div>          
+                </div>
             </md-tab>
             <md-tab label="Postulaciones">
                 <div layout="row">
