--- a/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
+++ b/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
@@ -5,40 +5,174 @@
                 <div class="t_ofer_p" layout="column" layout-align="start center">
                     <h1 class="md-display-3">{{NombreOferta}}</h1>
                     <div class="md-list-item-text" layout="column">
-                        
+
                         <h2>Etapa: {{ etapaDetalle.TipoEtapa.Nombre }}</h2>
                         <h4>Fecha Fin:{{ etapaDetalle.TipoEtapa.FechaFinTentativa }}</h4>
                         <p>{{ etapaDetalle.TipoEtapa.Descripcion }}</p>
-
                     </div>
-                    
+
                 </div>
                 <hr class="h_sop">
                 <div class="puestos">
-                    <h1><span style="font-weight:700;">Puestos</span> disponibles.</h1>
+                    <h1><span style="font-weight:700;">Puestos</span> de la oferta.</h1>
                     <div class="puestos_box" layout="column" layout-align="space-around center" flex="100">
                         <div flex="100">
                             <md-list>
-                                <md-list-item layout="column" class="secondary-button-padding" ng-repeat="p in etapaDetalle.PuestosEtapaOferta">
-                                    <h3>{{p.Puesto.Nombre}}</h3>
-                                    <h4>{{p.Puesto.Descripcion}}</h4>
-                                    <md-button class="md-secondary" ui-sref="empresa.ofertas.etapaDetalle.listadoPostulantes({idEtapa: etapaDetalle.Id, puesto: p})">Detalle</md-button>
+
+                                <md-list-item layout="column" class="secondary-button-padding" ng-repeat="peo in etapaDetalle.PuestosEtapaOferta">
+                                    <md-card>
+                                        <div class="">
+                                            <!--#region iafar:lista nueva de postulantes-->
+                                            <md-toolbar class="md-whiteframe-1dp" flex>
+                                                <div class="md-toolbar-tools">
+                                                    <div class="md-title">
+                                                        <h2>{{peo.Puesto.Nombre}}</h2>
+                                                        <h3>{{peo.Puesto.Descripcion}}</h3>
+                                                    </div>
+                                                </div>
+                                            </md-toolbar>
+
+                                            <md-toolbar class="md-table-toolbar md-default md-whiteframe-2dp">
+                                                <div class="md-toolbar-tools"
+                                                     layout="row"
+                                                     ng-hide="opcionBuscar">
+                                                    <span>Postulantes</span>
+                                                    <div flex="55"></div>
+                                                    <div layout-align="end center"
+                                                         layout="row"
+                                                         flex="20">
+                                                        <md-button flex
+                                                                   ng-click="opcionBuscar=true">
+                                                            <md-icon md-svg-src="svg/search.svg"></md-icon>
+                                                        </md-button>
+
+                                                    </div>
+                                                </div>
+
+                                                <div class="md-table-toolbar"
+                                                     layout="row"
+                                                     layout-align="end center"
+                                                     ng-hide="!opcionBuscar">
+                                                    <md-input-container flex="75">
+                                                        <label>Buscar</label>
+                                                        <input ng-model="posBuscado">
+                                                    </md-input-container>
+
+                                                    <div layout-align="start"
+                                                         layout="row"
+                                                         flex="20">
+
+                                                        <md-button flex
+                                                                   ng-click="opcionBuscar=false">
+                                                            <md-icon md-svg-src="svg/exit.svg"></md-icon>
+                                                        </md-button>
+                                                    </div>
+                                                </div>
+
+                                            </md-toolbar>
+
+
+                                            <md-table-container>
+                                                <table md-table
+                                                       ng-hide="docList==0"
+                                                       ng-model="selectPostulantes"
+                                                       flex>
+                                                    <thead md-head
+                                                           md-order="query.order">
+                                                        <tr md-row>
+                                                            <!--<th md-column></th>-->
+                                                            <th md-column>Nombre</th>
+                                                            <th md-column md-order-by="Profesional.Apellido">Apellido</th>
+                                                            <th md-column>Observaciones</th>
+                                                            <th md-column md-order-by="Valoracion">Valoración</th>
+                                                            <th md-column>¿Aprueba?</th>
+                                                            <th md-column></th>
+                                                            <th md-column></th>
+                                                            <!--<th md-column>Excluyente</th>-->
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody md-body>
+                                                        <tr ng-hide="peo.Postulaciones.length">
+                                                            <td colspan="5">
+                                                                Todavía no hay postulantes para este puesto.
+                                                            </td>
+                                                        </tr>
+
+                                                        <tr md-row
+                                                            ng-repeat=" postulante in peo.Postulaciones | limitTo: query.limit : (query.page -1) * query.limit | filter:posBuscado | orderBy: query.order">
+                                                            <!--aqui va el repeat-->
+                                                            <!--<td md-cell>
+                                                                {{($index+1) + (query.page - 1)*query.limit}}
+                                                            </td>-->
+                                                            <td md-cell>
+                                                                {{postulante.Profesional.Nombre}}
+                                                            </td>
+
+                                                            <td md-cell>
+                                                                {{postulante.Profesional.Apellido}}
+                                                            </td>
+                                                            <td md-cell>
+                                                                {{postulante.Comentario}}
+                                                            </td>
+                                                            <td md-cell>
+                                                                {{postulante.Valoracion}}
+                                                            </td>
+                                                            <td md-cell>
+                                                                <md-checkbox ng-model="postulante.PasaEtapa" ng-disabled="true">
+                                                                </md-checkbox>
+                                                            </td>
+                                                            <td md-cell>
+                                                                <md-button ng-click="postulanteModificar(postulante)">
+                                                                    <md-icon style="color: forestgreen;" md-svg-src="svg/eye.svg"></md-icon>
+                                                                </md-button>
+                                                            </td>
+                                                            <!--<td md-cell>
+                                                                <md-button ng-click="postulanteDetalle(postulante.Profesional.Id)">
+                                                                    <md-icon style="color: forestgreen;" md-svg-src="svg/eye.svg"></md-icon>
+                                                                </md-button>
+                                                            </td>-->
+
+                                                        </tr>
+
+                                                    </tbody>
+                                                </table>
+
+                                            </md-table-container>
+                                            <div ng-show="docList == 0" layout-align="center center" flex>
+                                                <br>
+                                                <span>No posee Identificaciones cargadas</span>
+                                                <br>
+                                            </div>
+                                            <md-table-pagination md-label="{page: 'Pag.:',rowsPerPage: 'Filas:',of: 'de'}"
+                                                                 md-page-select="true"
+                                                                 md-boundary-links="true"
+                                                                 md-limit="query.limit"
+                                                                 md-page="query.page"
+                                                                 md-total="{{p.Postulaciones.length}}">
+                                            </md-table-pagination>
+                                            <!--<md-button ng-click="guardarPostulantes(selectPostulantes)" class="md-primary">Guardar Cambios</md-button>
+
+                                            <md-button ui-sref="empresa.ofertas.etapaDetalle({idEtapa: etapaDetalle.Id, NombreOferta: ofertaDetalle.Nombre})" class="md-accent">Cancelar</md-button>-->
+                                            <!--#endregion-->
+                                        </div>
+                                        <!--<md-button class="md-secondary" ui-sref="empresa.ofertas.etapaDetalle.listadoPostulantes({idEtapa: etapaDetalle.Id, puesto: p})">Detalle</md-button>-->
+                                    </md-card>
                                 </md-list-item>
+
                             </md-list>
+
                         </div>
 
 
-                        
-                     
+
                     </div>
                     <div layout="row" ng-click="pasarSiguienteEtapa()" layout-align="end end">
                         <md-button>Finalizar Etapa</md-button>
-                                                <md-button ng-click="postulanteDetalle(postulante.ProfesionalId)">
+                        <md-button ng-click="postulanteDetalle(postulante.ProfesionalId)"></md-button>
                     </div>
-                    
+
                 </div>
             </div>
-
         </md-content>
     </md-container>
 </main>
