modificaciones en notificaciones

--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
@@ -9,8 +9,8 @@
                 </md-button>
                 <md-menu-content width="3">
                     <md-menu-item>
-                        <a ui-sref="profesional.ofertas"><md-button> <span md-menu-align-target class="sm">Listado de ofertas</span></md-button>
-                    </md-menu-item></a>                    
+                        <a ui-sref="profesional.ofertas"><md-button> <span md-menu-align-target class="sm">Listado de ofertas</span></md-button></a> 
+                    </md-menu-item>                   
                 </md-menu-content>
             </md-menu>
         </li>
