--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -25,26 +25,28 @@
             
         <li>
             <md-menu>                
-                <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
+                <md-button flex ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
                     <notification-icon animation="grow" count="countNotifNoLeidas()">
                         {{countNotifNoLeidas()}}
                         <i class="fa fa-globe fa-2x"></i>
                     </notification-icon>
                 </md-button>
-                <md-menu-content>
-                    <md-menu-item ng-repeat="n in notificaciones.all" ng-style="n.FechaLectura == null ? {'background-color': 'aliceblue'} : {'background-color': 'white'}">
-                        <div class="notis_info" ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">
-                            <div class="ni1">
-                                <h3>{{n.TipoNotificacion.Descripcion}}</h3>
-                                <h4>{{n.Mensaje}}</h4>
-                                <h5>{{n.FechaPublicacion | date:'medium'}}</h5>
-                                <!--<md-button ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">Ver Detalle</md-button>-->                                
+                <md-menu-content >
+                    <md-menu-item ng-repeat="n in notificaciones.all" layout="column" ng-style="n.FechaLectura == null ? {'background-color': 'aliceblue'} : {'background-color': 'white'}" style="min-height:100px">
+                        <div class="notis_info">
+                            <div class="ni1" layout="column">
+                                <h5>{{n.TipoNotificacion.Descripcion}}</h5>
+                                <h6>{{n.Mensaje}}</h6>
+                                <h6>{{n.FechaPublicacion | date:'medium'}}</h6>
+                                <md-button ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)" layout-align="center center">Ver Detalle</md-button>
+                                <md-divider></md-divider>
+
                             </div>
+                            
                         </div>
-                    </md-menu-item>                                              
-                    <md-menu-item>                        
-                        <a ui-sref="empresa.centroNotificaciones">Ver Todas</a>
+                        
                     </md-menu-item>
+                    <md-button ui-sref="empresa.centroNotificaciones">Ver Todas</md-button>                                              
                 </md-menu-content>
             </md-menu>
         </li>
