--- a/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
+++ b/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
@@ -1,117 +1,104 @@
-﻿<main>
+﻿<main ng-cloak>
     <md-content>
         <md-tabs md-dynamic-height md-border-bottom>
             <!-- #region Todas las notificaciones (ui-view="detalleNotificacion") -->
-            <md-tab label="Todo">
-                <div layout="row">
-                    <div flex>
-                        <div class="n_centro">
-                            <md-content style="height: 600px;">
-                                <md-subheader class="md-primary">Notificaciones</md-subheader>
-                                <md-list layout-padding>
-                                    <md-list-item class="md-3-line" ng-repeat="n in notificaciones">
-                                        <img src="img/perfil.jpg" class="md-avatar" alt="{{message.who}}">
-                                        <div class="md-list-item-text">
-                                            <div class="notis_info">
-                                                <div class="ni1">
-                                                    <h3>{{n.TipoNotificacion.Descripcion}}</h3>
-                                                    <h4>{{n.Mensaje}}</h4>
-                                                </div>
-
-                                                <div class="ni2">
-                                                    <h5>{{n.FechaPublicacion | date:'medium'}}</h5>
-                                                    <md-button ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">Ver Mas</md-button>
-
-                                                </div>
-                                            </div>
+            <md-tab label="Todo" md-on-select="ocultarDetalle()">
+                <md-content layout="row" style="height: 600px;">
+                    <div flex="30">
+                        <md-subheader class="md-primary">Notificaciones</md-subheader>
+                        <md-list layout-padding>
+                            <md-list-item class="md-3-line" ng-repeat="n in notificaciones" ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">
+                                <!--<img src="img/perfil.jpg" class="md-avatar" alt="{{message.who}}">-->
+                                <div class="md-list-item-text">
+                                    <div class="notis_info">
+                                        <div class="ni1">
+                                            <h3>{{n.TipoNotificacion.Descripcion}}</h3>
+                                            <p>{{n.Mensaje}}<p />
                                         </div>
-                                    </md-list-item>
-                                </md-list>
-                            </md-content>
-                        </div>
+                                        <div class="ni2">
+                                            <h5>{{n.FechaPublicacion | date:'medium'}}</h5>
+                                            <!--<md-button>Ver Mas</md-button>-->
+                                        </div>
+                                    </div>
+                                </div>
+                                <md-divider></md-divider>
+                            </md-list-item>
+                        </md-list>
+
+
                     </div>
-                    <div flex>
-                        <div ui-view="detalleNotificacion"></div>
+                    <div flex ng-hide="mostrarDetalle">
+                        Seleccione un mensaje
                     </div>
-                </div>
+                    <div flex ui-view="detalleNotificacion" ng-hide="!mostrarDetalle"></div>
+                </md-content>
             </md-tab>
 
             <!-- #endregion -->
-
             <!-- #region Solicitudes de verificacion de experiencia (ui-view="detalleNotificacionExp") -->
-            <md-tab label="Experiencias para verificar"
-                    > <!--md-on-select='verDetalleNotif(2,"EXP")'-->
+            <md-tab label="Experiencias para verificar" md-on-select="ocultarDetalle()">
+                <!--md-on-select='verDetalleNotif(2,"EXP")'-->
                 <md-content flex layout="row" style="height: 600px;">
                     <div flex="30">
                         <md-subheader class="md-primary">Nuevas Experiencias</md-subheader>
                         <md-list layout-padding>
-                            <md-list-item class="md-3-line" ng-repeat="nExp in experienciasPendientesList" ng-click="detalleExperienciaPendiente(nExp.id)">
+                            <md-list-item class="md-3-line" ng-repeat="nExp in experienciasPendientesList" ng-click='verDetalleNotif(nExp.id, "EXP")'>
                                 <!--<img src=" img />perfil.jpg" class="md-avatar" alt="{{message.who}}">--> <!--iafar: probar en el ng-click con el state.go-->
                                 <div class="md-list-item-text">
                                     <div class="notis_info">
                                         <div class="ni1">
-                                            <h3>Solicitud de Verificacion</h3> <!--{{n.TipoNotificacion.Descripcion}}-->
-                                            <h4>{{nExp.puesto}}</h4>   <!--{{n.Mensaje}}-->
+                                            <h3>Solicitud de Verificacion</h3>
+                                            <p>{{nExp.puesto}}</p>
                                         </div>
-                                        <div class="ni2">
-                                            <h5>{{nExp.fechaCreacion | date:'dd/MM/yyyy'}}</h5> <!--{{n.FechaPublicacion | date:'medium'}}-->
-                                        </div>
+                                    </div>
+                                    <div class="ni2">
+                                        <h5>{{nExp.fechaCreacion | date:'medium'}}</h5>
                                     </div>
                                 </div>
 
-
+                                <md-divider></md-divider>
                             </md-list-item>
                         </md-list>
                     </div>
-                    <div flex="60" ui-view="detalleNotificacionExp">
-
+                    <div flex ng-hide="mostrarDetalle">
+                        Seleccione un mensaje
                     </div>
+                    <div flex ui-view="detalleNotificacion" ng-hide="!mostrarDetalle"></div>
                 </md-content>
 
             </md-tab>
 
             <!-- #endregion -->
-
             <!-- #region Notificaciones de postulaciones (ui-view="detalleNotificacionPostulante") -->
-            <md-tab label="Postulaciones">
-                <div layout="row">
-                    <div flex>
-                        <div class="n_centro">
-                            <md-content style="height: 600px;">
-                                <md-subheader class="md-primary">Nuevas Postulaciones</md-subheader>
-                                <md-list layout-padding>
-                                    <md-list-item class="md-3-line" ng-repeat="n in notificaciones | filterBy: ['TipoNotificacion.Valor']: 'POS'">
-                                        <img src="img/perfil.jpg" class="md-avatar" alt="{{message.who}}">
-                                        <div class="md-list-item-text">
-                                            <div class="notis_info">
-                                                <div class="ni1">
-                                                    <h3>{{n.TipoNotificacion.Descripcion}}</h3>
-                                                    <h4>{{n.Mensaje}}</h4>
-                                                </div>
-
-                                                <div class="ni2">
-                                                    <h5>{{n.FechaPublicacion | date:'medium'}}</h5>
-                                                    <md-button ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">Ver Mas</md-button>
-
-                                                </div>
-
-                                            </div>
+            <md-tab label="Postulaciones" md-on-select="ocultarDetalle()">
+                <md-content layout="row" style="height: 600px;">
+                    <div flex="30">
+                        <md-subheader class="md-primary">Nuevas Postulaciones</md-subheader>
+                        <md-list layout-padding>
+                            <md-list-item class="md-3-line" ng-repeat="n in notificaciones | filterBy: ['TipoNotificacion.Valor']: 'POS'" ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)">
+                                <!--<img src="img/perfil.jpg" class="md-avatar" alt="{{message.who}}">-->
+                                <div class="md-list-item-text">
+                                    <div class="notis_info">
+                                        <div class="ni1">
+                                            <h3>{{n.TipoNotificacion.Descripcion}}</h3>
+                                            <p>{{n.Mensaje}}</p>
                                         </div>
-                                    </md-list-item>
-                                </md-list>
-                            </md-content>
-                        </div>
+                                        <div class="ni2">
+                                            <h5>{{n.FechaPublicacion | date:'medium'}}</h5>
+                                            <!--<md-button>Ver Mas</md-button>-->
+                                        </div>
+                                    </div>
+                                </div>
+                                <md-divider></md-divider>
+                            </md-list-item>
+                        </md-list>
                     </div>
-                    <div flex>
-                        <div ui-view="detalleNotificacionPostulante"></div>
-                        <!--<div class="n_detalle">
-                            <h1>Detalle de la notificación</h1>
-                            <div class="detalle_cont">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit voluptate optio suscipit odio!</p>
-                            </div>
-                        </div>-->
+                    <div flex ng-hide="mostrarDetalle">
+                        Seleccione un mensaje
                     </div>
-                </div>
+                    <div flex ui-view="detalleNotificacion" ng-hide="!mostrarDetalle"></div>
+                </md-content>
+              
             </md-tab>
             <!-- #endregion -->
         </md-tabs>
